2014-07-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c (update_info_dumper): Do not update if size or
	  csize is 0.
	* server-src/server_util.c: Do not uses history if size is 0.

2014-06-26  Strong Liang <strong@zmanda.com>
	* server-src/driver.c: Updated copyright-info.
	* ChangeLog: trimed trailing spaces.

2014-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Use ${MKDIR_P}
	* device-src/Makefile.am, ndmp-src/Makefile.am, xfer-src/Makefile.am:
	  Use ${SED}

2014-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Remove useless space.

2014-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/Makefile.am, patching file ndmp-src/Makefile.am,
	  xfer-src/Makefile.am: Fix install-build-dependencies.

2014-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Use bloking connect.

2014-06-17  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am (install-build-dependencies): Copy include and config
	  for client.

2014-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Create the directory.

2014-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Fix for client/server install-build-dependencies
	  target.

2014-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am, common-src/Makefile.am, device-src/Makefile.am,
	  ndmp-src/Makefile.am, xfer-src/Makefile.am: Add
	  install-build-dependencies target.

2014-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Dumps.pl: Sort dumps in reply.

2014-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Accept some log lines in varying order.

2014-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Split in two files.
	* config/amanda/amanda_configure.m4: All global settings.
	* device-src/s3-util.h: Undef _

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>